--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,8 +1,8 @@
 {
   "name": "ahoy",
-  "app_id": "8e999b9b",
-  "type": "ionic-angular",
   "integrations": {
     "cordova": {}
-  }
+  },
+  "type": "ionic-angular",
+  "pro_id": "8e999b9b"
 }
