--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/http": "5.2.10",
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
-    "@ionic-native/camera": "4.3.3",
+    "@ionic-native/camera": "^4.3.3",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/device": "^4.7.0",
     "@ionic-native/file": "^4.7.0",
@@ -39,6 +39,7 @@
     "@ngx-translate/http-loader": "^2.0.0",
     "@types/google-maps": "^3.2.0",
     "cordova-android": "7.0.0",
+    "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.1",
@@ -76,7 +77,8 @@
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
       },
-      "cordova-plugin-nativegeocoder": {}
+      "cordova-plugin-nativegeocoder": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "android"
